--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,7 @@
 
 #missao {
 
-    border:  #8b0211 2px solid; 
+    border: #8b0210 2px solid; 
     padding: 10px;
 }
 
@@ -45,7 +45,7 @@
 
 section#principal {
 
-    border:rgba(168, 57, 68) solid 1px;
+    border:#8b0210 solid 1px;
     border-radius: 5%;
     width: 50%;
     height: 650px;
@@ -118,9 +118,6 @@ input{
 
 .btn{
 
-    border: none;
-    background-color: #74032e;
-    color: white;
     padding: 5px 30px;
     text-align: center;
     text-decoration: none;
@@ -171,18 +168,18 @@ border: none;
 
   .btn-outline-danger {
 
-    color: #ff0000;
-    background-color: transparent;
-    border-color: #f1eeef;
-    font-weight: bold;
-    background-color: #D3D3D3;
+    color: #fff;
+    background-color: #8b0210;
+    border-color: #f7f7f7;
   }
   
 .btn-outline-danger:hover {
 
-    color: #fff;
-    background-color: #8b0210;
-    border-color: #f7f7f7;
+    color: #ff0000;
+    background-color: transparent;
+    border-color: #8b0210 solid 1px;
+    font-weight: bold;
+    background-color: #D3D3D3;
   }
 
   .legend {
@@ -229,8 +226,8 @@ border: none;
 
 #selecionarFornecedor:hover{
 
-    width: 50px;
-    height: 50px;
+    width: 90px;
+    height: 90px;
     margin-bottom: 10px;
 }
 
@@ -291,8 +288,8 @@ border: none;
 
 #adicionaClienteVenda :hover{
     
-    width: 50px;
-    height: 50px;
+    width: 90px;
+    height: 90px;
 }
 
 #divDabosVenda label {
@@ -304,7 +301,7 @@ border: none;
 
 #itensAdicionados {
 
-    border: rgba(168, 57, 68) solid 1px; 
+    border: #8b0210 solid 1px; 
     margin-left: 3px;
     float: left;
     width: 67%;
@@ -369,7 +366,7 @@ border: none;
         text-align: right;
         float: right;
         margin-right: 5%;
-        background-color: rgba(168, 57, 68);
+        background-color: #8b0210;
         color: yellow;
         font-weight: bold;
         box-shadow: 5px 5px 0px #333;
@@ -380,7 +377,7 @@ border: none;
     #divDetalharVenda {
 
         border: rgba(168, 57, 68) solid 1px;
-        background-color: rgb(186, 75, 79);
+        background-color: #8b0210;
         width: 68%;
         height: 660px;
         margin-left: 1%;
@@ -391,8 +388,8 @@ border: none;
  
     #descricaoVendaCaixa {
         
-        background-color: rgb(186, 75, 79);
-      
+        background-color: #8b0210;
+        
         width: 100%;
         height: 42em;
         padding: 1%;
@@ -408,7 +405,7 @@ border: none;
 
     #listaVendas{
 
-        border: rgba(168, 57, 68) solid 1px; 
+        border: #8b0210 solid 1px; 
         height: 650px;  
         width: 98%;
         float: left;
@@ -477,7 +474,7 @@ border: none;
 
     .scroll {
 
-        max-width:100%;
+        max-width: 100%;
         overflow: auto;
     }
 
@@ -519,6 +516,6 @@ border: none;
     }
 
     table th, tr, td {
-        font-size: 13pt;
+        font-size: 15pt;
     }
 
